--- a/openshift-template.yml
+++ b/openshift-template.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Template
 metadata:
-  annotation:
+  labels:
     description: memcached is a high-performance, distributed memory object caching system, generic in nature, but intended for use in speeding up dynamic web applications by alleviating database load.
     tags: memcached
-    template: docker.io/phracek/memcached
+    template: docker.io/modularitycontainers/memcached
   name: memcached
 objects:
 - apiVersion: v1
@@ -12,7 +12,7 @@ objects:
   metadata:
     name: memcached
   spec:
-      dockerImageRepository: docker.io/phracek/memcached
+      dockerImageRepository: docker.io/modularitycontainers/memcached
   tags:
   - name: latest
 - apiVersion: v1
@@ -20,7 +20,7 @@ objects:
   metadata:
     name: memcached
   spec:
-    dockerImageRepository: docker.io/phracek/memcached
+    dockerImageRepository: docker.io/modularitycontainers/memcached
     replicas: 1
     strategy:
       type: Rolling
@@ -31,7 +31,7 @@ objects:
       spec:
         containers:
         - env:
-          image: docker.io/phracek/memcached
+          image: docker.io/modularitycontainers/memcached
           name: memcached
           ports:
           - containerPort: 11211
@@ -39,7 +39,7 @@ objects:
     - imageChangeParams:
         automatic: true
         containerNames:
-        - docker.io/phracek/memcached
+        - docker.io/modularitycontainers/memcached
         from:
           kind: ImageStreamTag
           name: memcached:latest
