--- a/memcached-container.service
+++ b/memcached-container.service
@@ -2,7 +2,7 @@
 Description="The memcached is High Performance, Distributed Memory Object Cache."
 
 [Service]
-ExecStart=/usr/bin/docker run -t -i -v /etc/sysconfig/memcached:/etc/sysconfig/memcached:ro -p 11211:11211 --name memcached-container memcached
+ExecStart=/usr/bin/docker run -t -v /etc/sysconfig/memcached:/etc/sysconfig/memcached:ro -p 11211:11211 --name memcached-container docker.io/modularitycontainers/memcached
 ExecStop=/usr/bin/docker stop -t 2 memcached-container
 ExecStopPost=/usr/bin/docker rm -f memcached-container
 
