--- a/Dockerfile.microdnf
+++ b/Dockerfile.microdnf
@@ -1,5 +1,4 @@
-FROM asamalik/fake-gen-core-module
-ADD memcached-module.repo /etc/yum.repos.d/memcached-module.repo
+FROM baseruntime/baseruntime:latest
 
 # memcached image for OpenShift.
 #
@@ -8,19 +7,28 @@ ADD memcached-module.repo /etc/yum.repos.d/memcached-module.repo
 # Ports:
 #  * 11211
 
-RUN dnf install -y --setopt=tsflags=nodocs memcached && \
-    dnf -y clean all
-
+ENV NAME=memcached ARCH=x86_64
+LABEL MAINTAINER "Petr Hracek" <phracek@redhat.com>
 LABEL summary="High Performance, Distributed Memory Object Cache" \
-    version="1.0" \
+    name="$FGC/$NAME" \
+    version="0" \
+    release="1.$DISTTAG" \
+    architecture="$ARCH" \
+    com.redhat.component=$NAME \
+    usage="docker run -p 11211:11211 f26/memcached" \
+    help="Runs memcached, which listens on port 11211. No dependencies. See Help File below for more details." \
     description="memcached is a high-performance, distributed memory object caching system, generic in nature, but intended for use in speeding up dynamic web applications by alleviating database load." \
     io.k8s.description="memcached is a high-performance, distributed memory object caching system, generic in nature, but intended for use in speeding up dynamic web applications by alleviating database load." \
     io.k8s.diplay-name="Memcached 1.4 " \
     io.openshift.expose-services="11211:memcached" \
     io.openshift.tags="memcached"
 
+RUN microdnf --nodocs install memcached && \
+    microdnf -y clean all
+
+
 ADD files /files
-MAINTAINER "Petr Hracek" <phracek@redhat.com>
+ADD help.md README.md /
 
 EXPOSE 11211
 
