Fixes #5 Multiple changes
Signed-off-by: Petr "Stone" Hracek <phracek@redhat.com>

--- a/memcached-container.service
+++ b/memcached-container.service
@@ -2,9 +2,11 @@
 Description="The memcached is High Performance, Distributed Memory Object Cache."
 
 [Service]
-ExecStart=/usr/bin/docker run -t -p 11211:11211 --name memcached-container docker.io/modularitycontainers/memcached
-ExecStop=/usr/bin/docker stop -t 2 memcached-container
-ExecStopPost=/usr/bin/docker rm -f memcached-container
+ExecStart=/usr/bin/docker run -t -p 11211:11211 --name memcached modularitycontainers/memcached
+ExecStop=/usr/bin/docker stop -t 2 memcached
+ExecStopPost=/usr/bin/docker rm -f memcached
+Type=oneshot
+RemainAfterExit=yes
 
 [Install]
 WantedBy=multi-user.target
