--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,6 +1,3 @@
-MODULE_LINT=/usr/share/moduleframework/tools/modulelint.py
-CMD=python -m avocado run --filter-by-tags=-WIP $(MODULE_LINT) *.py
-
 #
 all:
-	$(CMD)
+	mtf
