--- a/specs/multispec.yml
+++ b/specs/multispec.yml
@@ -8,14 +8,14 @@ specs:
       vendor: "Fedora Project"
   variant:
     upstream:
-      image_name: modularitycontainers/memcached
+      image_repository: "docker.io/modularitycontainers/memcached"
       readme_description: |-
         [![Build Status](https://travis-ci.org/container-images/memcached.svg?branch=master)](https://travis-ci.org/container-images/memcached)
 
         There is a detailed information about this image available in its [help
         page](https://github.com/container-images/memcached/blob/master/help/help.md).
     downstream:
-      image_name: f26/memcached
+      image_repository: "candidate-registry.fedoraproject.org/{{ config.os.id }}/{{ config.os.version }}/memcached"
       readme_description: >-
         There is a detailed information about this image available in its [help
         page](https://src.fedoraproject.org/container/memcached/blob/master/f/root/help.1).
