--- a/tests/config.yaml
+++ b/tests/config.yaml
@@ -12,6 +12,13 @@ testdependecies:
     rpms:
         - nc
 module:
+    openshift:
+        start: "docker run -it -e CACHE_SIZE=128 -p 11211:11211"
+        labels:
+            description: "memcached is a high-performance, distributed memory"
+            io.k8s.description: "memcached is a high-performance, distributed memory"
+        source: https://github.com/container-images/memcached.git
+        container: docker.io/modularitycontainers/memcached
     docker:
         start: "docker run -it -e CACHE_SIZE=128 -p 11211:11211"
         labels:
