--- a/1.5/Dockerfile.fedora
+++ b/1.5/Dockerfile.fedora
@@ -1,4 +1,4 @@
-FROM registry.fedoraproject.org/f29/s2i-core:latest
+FROM registry.fedoraproject.org/fedora:28
 
 ENV NAME=memcached \
     VERSION=1.5
